@@ -559,6 +559,19 @@ namespace Castle.MicroKernel
 		void AddFacility(String key, IFacility facility);
 
 		/// <summary>
+		/// Creates and adds an <see cref="IFacility"/> facility to the kernel.
+		/// </summary>
+		/// <typeparam name="T">The facility type.</typeparam>
+		/// <param name="key"></param>
+		void AddFacility<T>(String key) where T : IFacility, new();
+
+		/// <summary>
+		/// Creates and adds an <see cref="IFacility"/> facility to the kernel.
+		/// </summary>
+		/// <typeparam name="T">The facility type.</typeparam>
+		void AddFacility<T>() where T : IFacility, new();
+
+		/// <summary>
 		/// Returns the facilities registered on the kernel.
 		/// </summary>
 		/// <returns></returns>
